# M5Lite

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  install_pulse.py
Apps/: Terminal.pls
Pulse/: README.md  main.py  vm.py
Pulse/examples/: counter.pls
Screen/: app_viewer.h  gesture.h  notification_manager.h  status_bar.h
backup/: CMakeLists.txt  LICENSE  README.md  build_os.sh  install.py  install_os.py  menuconfig.sh
backup/.cache/index/: bluetooth.cpp.828D86C8A1BDA7B4.idx  button.cpp.1FDF839ED5FCF415.idx  compiler.cpp.E71943D5F1B04C80.idx  display.cpp.08A4BA043692A2C0.idx  display.h.16EBB0C6A3318C07.idx  error.h.F668C5247F19B5D1.idx  input.cpp.1B7009A334A206D9.idx  keyboard.cpp.8F10D9EAACA89363.idx  keyboard.h.09368F00774917C8.idx  label.cpp.4C6D59A1E901D651.idx  main.cpp.F948EEF78C1DA126.idx  network.cpp.8B6283E236F80BA5.idx  network.h.DECA72136BFEB72C.idx  notes.cpp.5788199D5E051AF5.idx  notes.h.28A0B0A778592D75.idx  parser.cpp.6D760F50CDDA34CD.idx  parser.h.CD636016024EB76B.idx  settings.cpp.BFA771F49AD91570.idx  storage.cpp.879EE278F918B143.idx  storage.h.3F62D863EABDA595.idx  terminal.cpp.D47AF4D0DCF021BA.idx  touch.cpp.608F2196C93E1AF8.idx  touch.h.9D82A77714F2F788.idx  update.cpp.47EE94055B4D030D.idx  weather.cpp.D2201540E800BA5E.idx  weather.h.6A4C9D3E3E594747.idx
backup/components/: CMakeLists.txt
backup/components/Apps/: CMakeLists.txt  settings.cpp
backup/components/Drivers/: CMakeLists.txt
backup/components/Drivers/Network/: network.cpp  network.h
backup/components/Drivers/Screen/Display/: display.cpp  display.h
backup/components/Drivers/Screen/Keyboard/: keyboard.cpp  keyboard.h
backup/components/Drivers/Screen/Touch/: touch.cpp  touch.h
backup/components/Drivers/Storage/: storage.cpp  storage.h
backup/components/Pulse/: CMakeLists.txt  Makefile  README.md  compiler.cpp  pulse
backup/components/Pulse/examples/: helloworld.pls  simple_button.pls
backup/components/Pulse/include/: error.h  parser.h  system.h
backup/components/Pulse/src/: lexer.l  parser.cpp  parser.y  system.cpp
backup/components/System/: CMakeLists.txt
backup/main/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  kernel.rs  main.cpp  main.ino  main.rs
docs/: README.md
flash/: flash_os.py
lib/: Bluetooth.rs  CMakeLists.txt  Network.rs  System.rs  file_management.rs
lib/Bluetooth/: Bluetooth.h  Bluetooth.rs
lib/Network/: Network.rs
lib/System/: System.rs
m5epd_wrapper/: m5epd_wrapper.cpp  m5epd_wrapper.h
pulse/: CMakeLists.txt  README.md  main.py
pulse/compiler/: Compiler.h  Compiler.rs
pulse/compiler/examples/: helloworld.pls
pulse/interpreter/: Interpreter.py
screen/: CMakeLists.txt  screen_manager.h  screen_manager.rs  task_manager.h  task_manager.rs
screen/layout/: app_layout.h  app_layout.rs  app_manager.h  app_manager.rs  app_viewer.rs  gesture.rs
screen/ui/: keyboard.rs  notification_manager.rs  status_bar.rs
